--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+background-color: #000000;
+
 /* desktop-wallpaper-terminator-t-800-terminator-thumbnail (1) 1 */
 .desktop-wallpaper {
     position: absolute;
