--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-background-color: #000000;
+body{
+  backgroud-color: #000000;
+}
 
 /* desktop-wallpaper-terminator-t-800-terminator-thumbnail (1) 1 */
 .desktop-wallpaper {
